# module

./: README.md
socket_code/: CMakeLists.txt
socket_code/epoll/service/: CMakeLists.txt  depends.cmake
socket_code/epoll/service/pub_include/: service.h
socket_code/epoll/service/source/: service.cpp
socket_code/project/: CMakeCache.txt  Makefile  cmake_install.cmake
socket_code/project/epoll/: Makefile  cmake_install.cmake
socket_code/project/epoll/service/: Makefile  cmake_install.cmake
socket_code/project/select/: Makefile  cmake_install.cmake
socket_code/project/select/service/: Makefile  cmake_install.cmake
socket_code/project/tcp/: Makefile  cmake_install.cmake
socket_code/project/tcp/client/: Makefile  cmake_install.cmake
socket_code/project/tcp/service/: Makefile  cmake_install.cmake
socket_code/project/tipc/: Makefile  cmake_install.cmake
socket_code/project/tipc/tipc_client/: Makefile  cmake_install.cmake
socket_code/project/tipc/tipc_service/: Makefile  cmake_install.cmake
socket_code/select/: CMakeLists.txt
socket_code/select/service/: CMakeLists.txt
socket_code/select/service/source/: service.cpp
socket_code/tcp/: CMakeLists.txt
socket_code/tcp/client/: CMakeLists.txt
socket_code/tcp/client/source/: client.cpp
socket_code/tcp/service/: CMakeLists.txt
socket_code/tcp/service/source/: service.cpp
socket_code/tipc/: CMakeLists.txt
socket_code/tipc/tipc_client/: CMakeLists.txt
socket_code/tipc/tipc_client/source/: client.cpp
socket_code/tipc/tipc_service/: CMakeLists.txt
trie/: main  main.cc  trie.py
(+1 files in other folders)
